fix: added scrollbar to filter slide-out for all pages

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -413,7 +413,10 @@ label.form-check-label, label.form-check,label{
     // top: 5px;
   }
 }
-
+.checkbox-group-fixed{
+  max-height: rem(274);
+  overflow-x: auto;
+}
 .radio-checkbox-group-fixed {
   max-height: rem(274);
   overflow-x: auto;
